@@ -44,3 +44,7 @@ History
                         
 08/20/2007	     1.4.1	Parameters for install_for_load added and fixed
                         ico file added
+                        
+09/06/2007	     1.4.2	Security Domain AID is automatically chosen based 
+                        on AID given to the select command or default Card 
+                        Manager / Security Issuer Domain AID is chosen
